修改默认ip,增加自动编译脚本

--- a/package/network/services/uhttpd/files/uhttpd.config
+++ b/package/network/services/uhttpd/files/uhttpd.config
@@ -110,7 +110,7 @@ config uhttpd main
 	# sections to require Basic auth to the specified
 	# resources.
 #	list httpauth prefix_user
-
+	option fros_ui 1
 
 # Defaults for automatic certificate and key generation
 config cert defaults
